Fix version number and package name in .bumpversion.cfg.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
 commit = True
 tag = True
-current_version = 0.0.3.dev2
+current_version = 0.0.3.dev1
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.dev(?P<dev>\d+))?
 serialize = 
 	{major}.{minor}.{patch}.dev{dev}
@@ -9,5 +9,5 @@ serialize =
 
 [bumpversion:file:setup.py]
 
-[bumpversion:file:panwid/__init__.py]
+[bumpversion:file:mlbstreamer/__init__.py]
 
