--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,10 +2,21 @@
 commit = True
 tag = True
 current_version = 0.0.4
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.dev(?P<dev>\d+))?
-serialize = 
-	{major}.{minor}.{patch}.dev{dev}
-	{major}.{minor}.{patch}
+# parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.dev(?P<dev>\d+))?
+# serialize =
+# 	{major}.{minor}.{patch}.dev{dev}
+# 	{major}.{minor}.{patch}
+
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
+serialize =
+    {major}.{minor}.{patch}.{release}{dev}
+    {major}.{minor}.{patch}
+
+[bumpversion:part:release]
+optional_value = gamma
+values =
+    dev
+    gamma
 
 [bumpversion:file:setup.py]
 
